# go2_charging_system

./: .gitignore  FRONTCAM_GUIDE.md  ONBOARDING.md  README.md  RUN_GUIDE.md  cyclonedds_eth0.xml  go2_front_calib.yaml
aruco_go2_docking/: README.md  package.xml  setup.cfg  setup.py
aruco_go2_docking/aruco_go2_docking/: aruco_detector_frontcam_node.py  aruco_detector_node.py  aruco_docking_controller_node.py  go2_front_calib_io.py  go2_front_camera_node.py  go2_front_gst_receiver.py  mock_charging_node.py
aruco_go2_docking/config/: docking_params.yaml  docking_params_frontcam.yaml  docking_params_real.yaml
aruco_go2_docking/launch/: aruco_docking.launch.py  aruco_docking_frontcam.launch.py  aruco_docking_real.launch.py  aruco_docking_sim.launch.py
aruco_go2_docking/models/aruco_marker_board/: model.config  model.sdf
aruco_go2_docking/models/aruco_marker_board/materials/scripts/: aruco_marker.material
aruco_go2_docking/scripts/: calibrate_go2_front.py  generate_aruco_marker.py  go2_front_live_view.py
aruco_go2_docking/worlds/: aruco_docking_test.world
go2_sport_bridge/: CMakeLists.txt  README.md  package.xml
go2_sport_bridge/launch/: go2_native_docking.launch.py  go2_native_docking_frontcam.launch.py
go2_sport_bridge/src/: sport_mode_adapter_node.cpp
