<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aruco_go2_docking</name>
  <version>0.1.0</version>
  <description>ArUco-marker-based docking pipeline for Unitree Go2 in Gazebo simulation.</description>
  <maintainer email="enbang0209@gmail.com">agbread</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <!-- Go2 내장 전면 카메라(H.264 멀티캐스트) 수신용 -->
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-gi</exec_depend>
  <exec_depend>gstreamer1.0-plugins-good</exec_depend>
  <exec_depend>gstreamer1.0-plugins-bad</exec_depend>
  <exec_depend>gstreamer1.0-libav</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
